crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__lovestruck_beast_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [],
  "triggers": [],
  "statics": [
    {
      "mode": "CantAttack",
      "affected": {
        "type": "SelfRef"
      },
      "modifications": [],
      "condition": null,
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "~ can't attack unless you control a 1/1 creature."
    }
  ],
  "replacements": [],
  "extractedKeywords": [],
  "parseWarnings": [
    {
      "type": "SwallowedClause",
      "detector": "Condition_Unless",
      "description": "This creature can't attack unless you control a 1/1 creature.",
      "line_index": 0
    }
  ]
}
