crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__monastery_swiftspear_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "Unimplemented",
        "name": "unknown",
        "description": "Haste"
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": "Haste",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    },
    {
      "kind": "Spell",
      "effect": {
        "type": "Unimplemented",
        "name": "unknown",
        "description": "Prowess"
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": "Prowess",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
