crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__mother_of_runes_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Activated",
      "effect": {
        "type": "GenericEffect",
        "static_abilities": [
          {
            "mode": "Continuous",
            "affected": {
              "type": "ParentTarget"
            },
            "modifications": [
              {
                "type": "AddKeyword",
                "keyword": {
                  "Protection": {
                    "CardType": "the color of your choice"
                  }
                }
              }
            ],
            "condition": null,
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "gain protection from the color of your choice"
          }
        ],
        "duration": "UntilEndOfTurn",
        "target": {
          "type": "Typed",
          "type_filters": [
            "Creature"
          ],
          "controller": "You",
          "properties": []
        }
      },
      "cost": {
        "type": "Tap"
      },
      "sub_ability": null,
      "duration": "UntilEndOfTurn",
      "description": "{T}: Target creature you control gains protection from the color of your choice until end of turn.",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
